test_case/rust-lang_rust/73663_656297827.rs
rust
fn main() {
    let x = #[cfg(test)] 4; // error: removing an expression is not supported in this position
}
